<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#cecece">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_16"
            android:padding="@dimen/dp_8"
            android:textAlignment="center"
            android:onClick="back"
            android:text="@string/back"/>

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_18"
            android:padding="@dimen/dp_8"
            android:textAlignment="center"
            android:text="@string/workinfo"/>

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_16"
            android:padding="@dimen/dp_8"
            android:textAlignment="center"
            android:onClick="Ok"
            android:text="@string/ok"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:padding="@dimen/dp_8"
        android:background="#cecece"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/unicode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:text="@string/team"
            android:textAlignment="center"
            android:padding="@dimen/dp_8"/>

        <EditText
            android:layout_width="@dimen/dp_0"
            android:layout_weight="2"
            android:textSize="@dimen/sp_16"
            android:id="@+id/et_tno"
            android:maxLength="2"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/textview_bg"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:text="@string/number"
            android:textAlignment="center"
            android:padding="@dimen/dp_8"/>

        <EditText
            android:layout_width="@dimen/dp_0"
            android:layout_weight="2"
            android:textSize="@dimen/sp_16"
            android:textAlignment="center"
            android:maxLength="2"
            android:inputType="number"
            android:id="@+id/et_pno"
            android:background="@drawable/textview_bg"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:text="@string/area"
            android:textAlignment="center"
            android:padding="@dimen/dp_8"/>

        <EditText
            android:layout_width="@dimen/dp_0"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_16"
            android:id="@+id/et_area"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="text"
            android:background="@drawable/textview_bg"/>

    </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:padding="@dimen/dp_8"
        android:background="#cecece"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/personal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:text="@string/like"
            android:textAlignment="center"
            android:padding="@dimen/dp_8"/>

        <Spinner
            android:layout_width="@dimen/dp_0"
            android:layout_weight="2"
            android:textSize="@dimen/sp_16"
            android:id="@+id/s_like"
            android:maxLength="2"
            android:entries="@array/like"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/spinner_bg"
            android:layout_height="match_parent"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>