<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/textview_bg"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_chakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:paddingTop="10dp"
        android:text="@string/chakan"
        android:textColor="#000"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cfcfcf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/tv_yidong"
        android:text="@string/yidong"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cfcfcf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/tv_del"
        android:text="@string/del"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="16sp"
        />

</LinearLayout>
