<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/dp_10"
              android:background="@drawable/textview_bg"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/radius"
        android:textSize="@dimen/sp_18"/>

    <EditText
        android:id="@+id/et_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/textview_bg"
        android:inputType="numberDecimal"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_15">

        <TextView
            android:id="@+id/tv_r_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/textview_bg"
            android:padding="@dimen/dp_8"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_r_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/textview_bg"
            android:padding="@dimen/dp_8"
            android:text="@string/sure"
            android:textAlignment="center"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>

</LinearLayout>
